# ec2-unikernel

./: .gitignore  .travis.yml  LICENSE  README.md  ec2-unikernel.cabal  package.sh  stack.yaml
packaging/: ec2-unikernel.dsc  ec2-unikernel.spec
packaging/debian/: changelog  control  copyright  install  rules
policies/: role-policy.json
src/: CommandLine.hs  Main.hs  Options.hs
