name:                ec2-unikernel
version:             0.9.2
synopsis:            A handy tool for uploading unikernels to Amazon's EC2.
description:         This tool uploads unikernels built with the HaLVM, Mirage,
                     or other tools to Amazon's cloud. The unikernel will then
                     appear as an AMI, which can be run and shared as needed.
homepage:            http://github.com/GaloisInc/ec2-unikernel
license:             BSD3
license-file:        LICENSE
author:              Adam Wick <awick@galois.com>
maintainer:          Adam Wick <awick@galois.com>
copyright:           Copyright 2016 Galois, Inc.
category:            AWS, Unikernel
build-type:          Simple
extra-doc-files:     README.md
cabal-version:       >=1.10

executable ec2-unikernel
  main-is:             Main.hs
  other-modules:       Options, CommandLine
  default-extensions:  OverloadedStrings, TemplateHaskell
  ghc-options:         -Wall
  build-depends:
                       amazonka       >= 1.4.0 && < 1.6.0,
                       amazonka-core  >= 1.4.0 && < 1.6.0,
                       amazonka-ec2   >= 1.4.0 && < 1.6.0,
                       amazonka-s3    >= 1.4.0 && < 1.6.0,
                       base           >= 4.7.0 && < 5.0.0,
                       bytestring     >= 0.10  && < 0.12,
                       directory      >= 1.2.2 && < 1.4,
                       filepath       >= 1.3.0 && < 1.5,
                       lens           >= 4.13  && < 5.0,
                       process        >= 1.2   && < 1.5,
                       semigroups     >= 0.18  && < 0.20,
                       temporary      >= 1.2.0 && < 1.4,
                       text           >= 1.2.2 && < 1.4,
                       time           >= 1.5   && < 1.8,
                       unix           >= 2.7.1 && < 2.9
  hs-source-dirs:      src
  default-language:    Haskell2010

source-repository head
  type: git
  location: git://github.com/GaloisInc/ec2-unikernel.git
